desktop and responsiveness with gradients

--- a/etable/app/globals.css
+++ b/etable/app/globals.css
@@ -37,6 +37,7 @@ body {
   background-color: var(--background);
   color: var(--foreground);
   font-family: var(--font-futura), sans-serif;
+  font-family: var(--font-dm-sans), sans-serif;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -58,27 +59,61 @@ body {
 ================================ */
 
 /* Main titles (gradient) */
+
+h1,
+h2 {
+  font-family: var(--font-futura), sans-serif;
+}
+
+
 h1,
 h2,
 h3 {
-  font-weight: 400;
   background: var(--gradient-gold);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-weight: 500;
 }
 
 /* Sizes */
 h1 {
   font-size: 90px;
-  line-height: 110px;
+  line-height: 120px;
+}
+
+@media screen and (max-width: 1024px) {
+  h1 {
+    font-size: 60px;
+    line-height: 80px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  h1 {
+    font-size: 38px;
+    line-height: normal;
+  }
 }
 
 h2 {
   font-size: 46px;
 }
 
+@media screen and (max-width: 767px) {
+  h2 {
+    font-size: 32px;
+    line-height: normal;
+  }
+}
+
 h3 {
   font-size: 24px;
+}
+
+@media screen and (max-width: 767px) {
+  h3 {
+    font-size: 20px;
+  }
 }
 
 /* Supporting headings */
@@ -109,14 +144,48 @@ p,
 small {
   font-size: 18px;
   font-weight: 400;
-  line-height: 1.6;
   color: var(--color-text-main);
+  font-family: var(--font-dm-sans), sans-serif;
+  line-height: 26px;
+}
+
+@media screen and (max-width: 767px) {
+
+  p,
+  small {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+small {
+  font-weight: 300;
+}
+
+@media screen and (max-width: 767px) {
+  small {
+    font-size: 14px !important;
+    line-height: normal !important;
+  }
 }
 
 .hero-para {
   font-size: 22px;
-  line-height: 1.6;
+  line-height: 32px;
   color: var(--color-text-main);
+  font-family: var(--font-dm-sans), sans-serif;
+}
+
+@media screen and (max-width: 767px) {
+
+  .hero-title br {
+    display: none;
+  }
+
+  .hero-para {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 /* ======== gradient ======== */
